--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -22,8 +22,8 @@ android {
 dependencies {
     wearApp project(':wear')
     compile project(':common')
-    compile 'com.google.android.gms:play-services-wearable:+'
-    compile 'com.android.support:cardview-v7:+'
+    compile 'com.google.android.gms:play-services-wearable:5.0.77'
+    compile 'com.android.support:cardview-v7:21.0.0-rc1'
     compile 'org.scribe:scribe:1.3.5'
     compile 'com.github.hotchemi:ProgressMenuItem:0.3.3'
 }
