--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile project(':common')
     compile 'com.google.android.support:wearable:+'
-    compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'com.google.android.gms:play-services-wearable:5.0.77'
     compile 'com.squareup:otto:1.3.5'
+    compile 'com.jakewharton:butterknife:5.1.2'
 }
